--- a/index.html
+++ b/index.html
@@ -110,239 +110,184 @@
 
     <!--
       Le main (<main>) est la section principale du contenu de la page.
-      Il contient les sections et les informations principales que l'utilisateur doit lire ou interagir avec.
-      Ici, il inclut une section d'introduction au site.-->
+    -->
     <main>
-      <section>
-        <!--
-          La section <section> est utilisée pour regrouper des contenus thématiquement liés.
-          Ici, elle contient un titre et un paragraphe d'introduction au site.-->
-        <h1>Introduction</h1>
-        <p>
-          Bienvenue sur le site de cours SIO Web. Ce site est conçu pour vous
-          aider à apprendre les bases du développement web, y compris HTML, CSS,
-          JavaScript, PHP, et bien plus encore. Explorez les différentes
-          sections pour découvrir des articles détaillés sur chaque sujet.
-        </p>
-      </section>
-      <!--
-        La section suivante contient des articles sur différents sujets liés au développement web.
-        Chaque article présente un sujet spécifique avec un titre, une description et un bouton pour en savoir plus.-->
-      <section>
-        <h2>Les Langages Frontend</h2>
-        <p>
-          Les langages frontend sont utilisés pour créer l'interface utilisateur
-          des applications web. Ils permettent de structurer, styliser et
-          dynamiser les pages web.
-          <!-- article sur l'html-->
-        </p>
-        <!--
-          Le cumul des classes dans une balise HTML se réfère à la possibilité d'associer plusieurs classes à un même élément en utilisant l'attribut class. Cela permet d'appliquer plusieurs styles ou comportements à cet élément, en combinant différentes classes CSS. -->
-        <div class="d-flex wrap">
-          <article>
-            <i class="fab fa-html5 htmlColor icon"></i>
-            <h3>Qu'est-ce que l'html ?</h3>
-            <p>
-              HTML (HyperText Markup Language) est le langage standard utilisé
-              pour créer et structurer les pages web. Il permet de définir les
-              éléments d'une page, tels que les titres, les paragraphes, les
-              liens, les images et bien d'autres contenus.
-            </p>
-            <button><a href="html.html">En savoir plus</a></button>
-          </article>
-          <!-- article sur le css-->
-          <article>
-            <i class="fab fa-css3-alt cssColor icon"></i>
-            <h3>Qu'est-ce que le CSS ?</h3>
-            <p>
-              CSS (Cascading Style Sheets) est un langage de style utilisé pour
-              décrire la présentation d'un document HTML. Il permet de contrôler
-              l'apparence des éléments sur une page web, tels que les couleurs,
-              les polices, les marges et la disposition.
-            </p>
-            <button><a href="css.html">En savoir plus</a></button>
-          </article>
-          <!-- article sur le javascript-->
-          <article>
-            <i class="fab fa-js-square jsColor icon"></i>
-            <h3>Qu'est-ce que le JavaScript ?</h3>
-            <p>
-              JavaScript est un langage de programmation qui permet d'ajouter de
-              l'interactivité et des fonctionnalités dynamiques aux pages web.
-              Il est souvent utilisé pour créer des animations, des formulaires
-              interactifs et des mises à jour de contenu en temps réel.
-            </p>
-            <button><a href="javascript.html">En savoir plus</a></button>
-          </article>
-        </div>
-        <h2>Les Langages Backend</h2>
-        <p>
-          Les langages backend sont utilisés pour gérer la logique métier, les
-          bases de données et les serveurs des applications web. Ils permettent
-          de traiter les données, d'effectuer des calculs et de répondre aux
-          requêtes des utilisateurs.
-        </p>
-        <div class="d-flex wrap">
-          <!-- article sur le php-->
-          <article>
-            <i class="fab fa-php phpColor icon"></i>
-            <h3>Qu'est ce que le PHP ?</h3>
-            <p>
-              PHP (Hypertext Preprocessor) est un langage de script côté serveur
-              principalement utilisé pour le développement web. Il permet de
-              créer des pages web dynamiques et interactives en s'intégrant
-              facilement avec des bases de données.
-            </p>
-            <button><a href="php.html">En savoir plus</a></button>
-          </article>
-          <!-- article sur le kotlin-->
-          <article>
-            <div>
-              <img src="img/Kotlin.png" alt="Kotlin Logo" class="kotlinLogo" />
-            </div>
-            <h3>Qu'est ce que le kotlin ?</h3>
-            <p>
-              Kotlin est un langage de programmation moderne qui s'exécute sur
-              la machine virtuelle Java (JVM) et est entièrement interopérable
-              avec Java. Il est conçu pour être plus concis, expressif et
-              sécurisé que Java, tout en conservant la puissance et la
-              flexibilité de la plateforme Java.
-            </p>
-            <button><a href="kotlin.html">En savoir plus</a></button>
-          </article>
-          <!-- article sur le python-->
-          <article>
-            <i class="fab fa-python pythonColor icon"></i>
-            <h3>Qu'est ce que le python ?</h3>
-            <p>
-              Python est un langage de programmation interprété, interactif et
-              orienté objet. Il est connu pour sa syntaxe claire et sa
-              lisibilité, ce qui en fait un choix populaire pour les débutants
-              et les développeurs expérimentés. Python est utilisé dans divers
-              domaines, tels que le développement web, l'analyse de données,
-              l'intelligence artificielle et l'automatisation des tâches.
-            </p>
-            <button><a href="python.html">En savoir plus</a></button>
-          </article>
-          <!-- article sur le SQL-->
-          <article>
-            <i class="fas fa-database sqlColor icon"></i>
-            <h3>Qu'est ce que le SQL ?</h3>
-            <p>
-              SQL (Structured Query Language) est un langage de programmation
-              utilisé pour gérer et manipuler des bases de données
-              relationnelles. Il permet d'effectuer des opérations telles que la
-              création, la lecture, la mise à jour et la suppression de données
-              dans une base de données.
-            </p>
-            <button><a href="sql.html">En savoir plus</a></button>
-          </article>
-        </div>
-      </section>
-      <!--
-        La section suivante présente les frameworks, avec un bref aperçu et un lien pour en savoir plus.
-      -->
-      <section>
-        <h2>Les Frameworks</h2>
-        <p>
-          Les frameworks sont des ensembles d'outils et de bibliothèques qui
-          facilitent le développement d'applications web en fournissant une
-          structure de base et des fonctionnalités prêtes à l'emploi. Ils
-          permettent de gagner du temps et d'améliorer la qualité du code.
-        </p>
-        <article>
-          <i class="fab fa-angular angularColor icon"></i>
-          <h3>Qu'est ce que le framework Angular ?</h3>
+      <div class="content-wrapper">
+        <section class="page-intro">
+          <h1>Introduction</h1>
           <p>
-            Angular est un framework JavaScript développé par Google pour la
-            création d'applications web dynamiques et interactives. Il utilise
-            TypeScript comme langage principal et offre des fonctionnalités
-            avancées telles que la liaison de données bidirectionnelle, la
-            gestion des composants et l'injection de dépendances.
+            Bienvenue sur le site de cours SIO Web. Ce site est conçu pour vous
+            aider à apprendre les bases du développement web, y compris HTML,
+            CSS, JavaScript, PHP et bien plus encore. Explorez les différentes
+            sections pour découvrir des articles détaillés sur chaque sujet.
           </p>
-          <button><a href="angular.html">En savoir plus</a></button>
-        </article>
-      </section>
-      <!--
-        La section suivante présente des outils et technologies essentiels pour le développement web.
-        Chaque article fournit une brève description et un lien pour en savoir plus.
-      -->
-      <section>
-        <h2>Outils et Technologies</h2>
-        <p>
-          Cette section présente des outils et technologies essentiels pour le
-          développement web. Ils sont largement utilisés par les développeurs
-          pour améliorer leur productivité et la qualité de leur code.
-        </p>
-        <div class="d-flex wrap">
-          <!-- article sur Git-->
+        </section>
+        <section class="page-section">
+          <h2>Les Langages Frontend</h2>
+          <p>
+            Les langages frontend sont utilisés pour créer l'interface
+            utilisateur des applications web. Ils permettent de structurer,
+            styliser et dynamiser les pages web.
+          </p>
+          <div class="d-flex wrap">
+            <article>
+              <i class="fab fa-html5 htmlColor icon"></i>
+              <h3>Qu'est-ce que l'HTML&nbsp;?</h3>
+              <p>
+                HTML est le langage standard utilisé pour structurer les pages
+                web et définir les éléments qui la composent.
+              </p>
+              <button><a href="pages/html.html">En savoir plus</a></button>
+            </article>
+            <article>
+              <i class="fab fa-css3-alt cssColor icon"></i>
+              <h3>Qu'est-ce que le CSS&nbsp;?</h3>
+              <p>
+                CSS permet de contrôler l'apparence d'une page web : couleurs,
+                polices, espacements et animations.
+              </p>
+              <button><a href="pages/css.html">En savoir plus</a></button>
+            </article>
+            <article>
+              <i class="fab fa-js-square jsColor icon"></i>
+              <h3>Qu'est-ce que le JavaScript&nbsp;?</h3>
+              <p>
+                JavaScript ajoute de l'interactivité aux pages web et permet de
+                manipuler le DOM en temps réel.
+              </p>
+              <button><a href="pages/javascript.html">En savoir plus</a></button>
+            </article>
+          </div>
+        </section>
+        <section class="page-section">
+          <h2>Les Langages Backend</h2>
+          <p>
+            Les langages backend gèrent la logique métier, les échanges avec les
+            bases de données et la sécurité des applications web.
+          </p>
+          <div class="d-flex wrap">
+            <article>
+              <i class="fab fa-php phpColor icon"></i>
+              <h3>Qu'est-ce que le PHP&nbsp;?</h3>
+              <p>
+                PHP est un langage côté serveur qui permet de créer des sites web
+                dynamiques et connectés à des bases de données.
+              </p>
+              <button><a href="pages/php.html">En savoir plus</a></button>
+            </article>
+            <article>
+              <img src="img/Kotlin.png" alt="Logo Kotlin" class="kotlinLogo" />
+              <h3>Qu'est-ce que Kotlin&nbsp;?</h3>
+              <p>
+                Kotlin est un langage moderne compatible avec l'écosystème Java,
+                utilisé pour le développement mobile et backend.
+              </p>
+              <button><a href="pages/kotlin.html">En savoir plus</a></button>
+            </article>
+            <article>
+              <i class="fab fa-python pythonColor icon"></i>
+              <h3>Qu'est-ce que Python&nbsp;?</h3>
+              <p>
+                Python est apprécié pour sa syntaxe claire et sert dans le web,
+                la data, l'automatisation ou encore l'intelligence artificielle.
+              </p>
+              <button><a href="pages/python.html">En savoir plus</a></button>
+            </article>
+            <article>
+              <i class="fas fa-database sqlColor icon"></i>
+              <h3>Qu'est-ce que le SQL&nbsp;?</h3>
+              <p>
+                SQL est le langage de référence pour manipuler les bases de
+                données relationnelles.
+              </p>
+              <button><a href="pages/sql.html">En savoir plus</a></button>
+            </article>
+          </div>
+        </section>
+        <section class="page-section">
+          <h2>Les Frameworks</h2>
+          <p>
+            Les frameworks accélèrent le développement en proposant une
+            structure et des composants réutilisables.
+          </p>
           <article>
-            <i class="fab fa-git-alt gitColor icon"></i>
-            <h3>Qu'est ce que Git ?</h3>
+            <i class="fab fa-angular angularColor icon"></i>
+            <h3>Qu'est-ce qu'Angular&nbsp;?</h3>
             <p>
-              Git est un système de contrôle de version distribué qui permet de
-              suivre les modifications apportées aux fichiers et de collaborer
-              efficacement avec d'autres développeurs. Il est largement utilisé
-              dans le développement logiciel pour gérer le code source et
-              faciliter le travail en équipe.
+              Angular est un framework front-end maintenu par Google qui
+              s'appuie sur TypeScript et une architecture par composants.
             </p>
-            <button><a href="git.html">En savoir plus</a></button>
+            <button><a href="pages/angular.html">En savoir plus</a></button>
           </article>
-          <!-- article sur GitHub-->
-          <article>
-            <i class="fab fa-github githubColor icon"></i>
-            <h3>Qu'est ce que GitHub ?</h3>
-            <p>
-              GitHub est une plateforme de développement collaboratif qui
-              utilise Git pour le contrôle de version. Elle permet aux
-              développeurs de stocker, partager et collaborer sur des projets de
-              code source. GitHub offre également des fonctionnalités telles que
-              la gestion des problèmes, les demandes de tirage (pull requests)
-              et l'intégration continue.
-            </p>
-            <button><a href="github.html">En savoir plus</a></button>
-          </article>
-
-          <!-- article sur linux-->
-          <article>
-            <i class="fab fa-linux linuxColor icon"></i>
-            <h3>Qu'est ce que Linux ?</h3>
-            <p>
-              Linux est un système d'exploitation open source basé sur le noyau
-              Linux. Il est largement utilisé dans les serveurs, les
-              superordinateurs et les appareils embarqués. Linux est connu pour
-              sa stabilité, sa sécurité et sa flexibilité, ce qui en fait un
-              choix populaire pour les développeurs et les entreprises.
-            </p>
-            <button><a href="linux.html">En savoir plus</a></button>
-          </article>
-          <!-- article sur ligne de commande linux-->
-          <article>
-            <i class="fas fa-terminal terminalColor icon"></i>
-            <h3>Qu'est ce que la ligne de commande Linux ?</h3>
-            <p>
-              La ligne de commande Linux est une interface textuelle qui permet
-              aux utilisateurs d'interagir avec le système d'exploitation en
-              saisissant des commandes. Elle offre un moyen puissant et flexible
-              de gérer les fichiers, d'exécuter des programmes et d'automatiser
-              des tâches. La ligne de commande est particulièrement appréciée
-              par les administrateurs système et les développeurs pour sa
-              rapidité et son efficacité.
-            </p>
-            <button>
-              <a href="linux_command_line.html">En savoir plus</a>
-            </button>
-          </article>
-        </div>
-      </section>
+        </section>
+        <section class="page-section">
+          <h2>Outils et technologies</h2>
+          <p>
+            Découvrez des outils incontournables pour versionner votre code et
+            travailler efficacement sur vos projets.
+          </p>
+          <div class="d-flex wrap">
+            <article>
+              <i class="fab fa-git-alt gitColor icon"></i>
+              <h3>Qu'est-ce que Git&nbsp;?</h3>
+              <p>
+                Git est un système de contrôle de version distribué pour suivre
+                l'évolution d'un projet et collaborer.
+              </p>
+              <button><a href="pages/git.html">En savoir plus</a></button>
+            </article>
+            <article>
+              <i class="fab fa-github githubColor icon"></i>
+              <h3>Qu'est-ce que GitHub&nbsp;?</h3>
+              <p>
+                GitHub est une plateforme collaborative qui héberge des dépôts
+                Git et facilite le travail en équipe.
+              </p>
+              <button><a href="pages/github.html">En savoir plus</a></button>
+            </article>
+            <article>
+              <i class="fab fa-linux linuxColor icon"></i>
+              <h3>Qu'est-ce que Linux&nbsp;?</h3>
+              <p>
+                Linux est un système d'exploitation libre reconnu pour sa
+                stabilité et sa sécurité.
+              </p>
+              <button><a href="pages/linux.html">En savoir plus</a></button>
+            </article>
+            <article>
+              <i class="fas fa-terminal terminalColor icon"></i>
+              <h3>Commandes Linux</h3>
+              <p>
+                La ligne de commande offre un accès rapide et scriptable aux
+                fonctionnalités avancées du système.
+              </p>
+              <button><a href="pages/linux_command_line.html">En savoir plus</a></button>
+            </article>
+          </div>
+        </section>
+      </div>
     </main>
     <!--
       Le footer (<footer>) est la section de pied de page de la page.
       Il contient généralement des informations supplémentaires comme les droits d'auteur, les liens vers les politiques de confidentialité, etc.
       Ici, il affiche un message de droits d'auteur.
     -->
-    <footer>
-      <p>&copy; 2023 COURS SIO WEB LDV Melun. Tous droits réservés.</p>
+    <footer class="site-footer" id="contact">
+      <div class="footer-content">
+        <form class="footer-form" method="post" action="#contact">
+          <fieldset>
+            <legend>Contact rapide</legend>
+            <label for="footer-name">Nom complet</label>
+            <input type="text" id="footer-name" name="full-name" required placeholder="Ex. Ada Lovelace" />
+            <label for="footer-email">Adresse e-mail</label>
+            <input type="email" id="footer-email" name="email" required placeholder="vous@example.com" />
+            <label for="footer-message">Votre message</label>
+            <textarea id="footer-message" name="message" rows="3" required placeholder="Expliquez votre demande..."></textarea>
+            <button type="submit">Envoyer ma question</button>
+          </fieldset>
+        </form>
+        <p class="form-guidance">Nous répondons dans un délai indicatif de 48&nbsp;heures pendant les heures de cours.</p>
+      </div>
     </footer>
     <!-- script en bas de page aprés le footer-->
     <script src="js/main.js"></script>
