--- a/pages/linux_command_line.html
+++ b/pages/linux_command_line.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/Global.css" />
-    <title>COURS SIO WEB | CSS</title>
+    <link rel="stylesheet" href="../css/linux_command_line.css" />
+    <title>COURS SIO WEB | Commandes Linux</title>
   </head>
   <body>
     <header>
@@ -42,61 +43,80 @@
     <main>
       <div class="content-wrapper">
         <section class="page-intro">
-          <h1>Introduction à CSS</h1>
+          <h1>Commandes Linux indispensables</h1>
           <p>
-            CSS (Cascading Style Sheets) définit l'apparence visuelle des pages
-            web. Il a été normalisé par le W3C en 1996 et s'est enrichi de
-            nombreuses fonctionnalités : animations, grilles, variables
-            personnalisées ou encore mises en page responsive.
+            Ce mémento rassemble les commandes étudiées pendant les séances de
+            SISR. Chaque action est accompagnée d'un exemple concret et d'une
+            description pour faciliter la révision.
           </p>
         </section>
         <section class="page-section">
-          <h2>Structurer une feuille de style</h2>
-          <p>
-            Une règle CSS se compose d'un sélecteur et d'un bloc de déclarations
-            : chaque déclaration associe une propriété à une valeur.
-          </p>
-          <pre>
-            <code>
-article {
-  background-color: #ffffff;
-  border-radius: 16px;
-  padding: 32px;
-}
-            </code>
-          </pre>
+          <h2>Mémento rapide</h2>
+          <table class="commands-table">
+            <caption>Tableau de synthèse des commandes Linux</caption>
+            <thead>
+              <tr>
+                <th scope="col">Commande</th>
+                <th scope="col">Description</th>
+                <th scope="col">Exemple d'utilisation</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row"><code>ls</code></th>
+                <td>Liste le contenu du répertoire courant.</td>
+                <td><code>ls -la</code></td>
+              </tr>
+              <tr>
+                <th scope="row"><code>cd</code></th>
+                <td>Change de répertoire.</td>
+                <td><code>cd /var/www</code></td>
+              </tr>
+              <tr>
+                <th scope="row"><code>mkdir</code></th>
+                <td>Crée un nouveau dossier.</td>
+                <td><code>mkdir sauvegardes</code></td>
+              </tr>
+              <tr>
+                <th scope="row"><code>rm</code></th>
+                <td>Supprime un fichier ou un dossier.</td>
+                <td><code>rm fichier.log</code></td>
+              </tr>
+              <tr>
+                <th scope="row"><code>cp</code></th>
+                <td>Copie un fichier ou un répertoire.</td>
+                <td><code>cp index.html backup/index.html</code></td>
+              </tr>
+              <tr>
+                <th scope="row"><code>pwd</code></th>
+                <td>Affiche le chemin du répertoire courant.</td>
+                <td><code>pwd</code></td>
+              </tr>
+            </tbody>
+          </table>
         </section>
-
         <section class="page-section">
-          <h2>Lier une feuille CSS à une page HTML</h2>
-          <p>
-            On relie généralement une feuille de style externe avec la balise
-            <code>&lt;link rel="stylesheet" href="chemin.css" /&gt;</code>
-            placée dans l'en-tête du document. Cette méthode sépare le contenu
-            (HTML) de la présentation (CSS) et facilite la maintenance en
-            centralisant les styles au même endroit.
-          </p>
-          <p>
-            En utilisant un fichier CSS unique pour plusieurs pages, on garantit
-            également une charte graphique cohérente et on réduit la quantité de
-            code chargé par le navigateur grâce à la mise en cache.
-          </p>
-        </section>
-        <section class="page-section">
-          <h2>Bonnes pratiques</h2>
+          <h2>Comprendre la structure de la table</h2>
           <ul>
-            <li>Utiliser des classes explicites pour cibler les éléments.</li>
             <li>
-              Centraliser les couleurs, polices et espacements dans des variables
-              ou des feuilles communes.
+              <code>&lt;table&gt;</code> encapsule l'ensemble du tableau.
             </li>
             <li>
-              Travailler la responsivité avec des media queries pour s'adapter à
-              chaque support.
+              <code>&lt;caption&gt;</code> fournit un titre accessible décrivant le
+              contenu.
             </li>
             <li>
-              Tester l'accessibilité : contraste des couleurs, taille des
-              polices, interactions au clavier.
+              <code>&lt;thead&gt;</code> regroupe l'en-tête et <code>&lt;th&gt;</code>
+              définit les cellules de titre.
+            </li>
+            <li>
+              <code>&lt;tbody&gt;</code> contient les lignes de données composées
+              d'éléments <code>&lt;tr&gt;</code>.
+            </li>
+            <li>
+              <code>&lt;td&gt;</code> représente une cellule standard tandis que
+              <code>scope</code> améliore l'accessibilité en reliant les titres
+              aux cellules de données.
             </li>
           </ul>
         </section>
